import net.darkhax.curseforgegradle.TaskPublishCurseForge

plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
	id 'net.darkhax.curseforgegradle' version '1.1.18'
	id "com.modrinth.minotaur" version "2.+"
}

version = project.minecraft_version + "-" + project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

// Add the generated resources to the main source set
sourceSets {
	main {
		resources {
			srcDirs += [
					'src/main/generated'
			]
		}
	}
}
dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

// configure the maven publication
publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

tasks.register('publishCurseForge', TaskPublishCurseForge) {
	dependsOn(tasks.jar)
	apiToken = System.getenv("CURSEFORGE_TOKEN")

	def projectId = findProperty('curseforge_project_id')

	def mainFile = upload(projectId, tasks.jar.archiveFile)
	mainFile.changelog = file('changelog.md')
	mainFile.displayName = findProperty('mod_name') + ' ' + findProperty('version')
	mainFile.releaseType = 'release'
}

modrinth {
	token.set(System.getenv("MODRINTH_TOKEN"))
	projectId.set(findProperty('modrinth_project_id'))
	changelog.set(file('changelog.md').text)
	versionName.set(findProperty('mod_name') + ' ' + findProperty('version'))
	versionType.set("release")
	uploadFile.set(tasks.jar)
	dependencies {
		required.project("fabric-api")
	}
}
tasks.modrinth.dependsOn(tasks.jar)